VmName and ClusterName value objects and tests fixes