@@ -1,6 +1,5 @@
 package com.k8s.generator.orchestrator;
 
-import com.k8s.generator.ip.IpAllocator;
 import com.k8s.generator.ip.SequentialIpAllocator;
 import com.k8s.generator.model.*;
 import org.junit.jupiter.api.BeforeEach;
@@ -9,7 +8,8 @@ import org.junit.jupiter.api.Test;
 import java.util.List;
 import java.util.Optional;
 
-import static org.assertj.core.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 /**
  * Integration tests for ClusterOrchestrator.
@@ -23,6 +23,15 @@ import static org.assertj.core.api.Assertions.*;
  * </ul>
  */
 class ClusterOrchestratorTest {
+    private static final ClusterName DEV = ClusterName.of("dev");
+    private static final ClusterName STAGING = ClusterName.of("staging");
+    private static final ClusterName MGMT = ClusterName.of("mgmt");
+
+    private static final VmName PROD_MASTER_1 = VmName.of("prod-master-1");
+    private static final VmName PROD_MASTER_2 = VmName.of("prod-master-2");
+    private static final VmName PROD_WORKER_1 = VmName.of("prod-worker-1");
+    private static final VmName PROD_WORKER_2 = VmName.of("prod-worker-2");
+    private static final VmName PROD_WORKER_3 = VmName.of("prod-worker-3");
 
     private ClusterOrchestrator orchestrator;
 
@@ -39,13 +48,13 @@ class ClusterOrchestratorTest {
     void shouldOrchestrateKindCluster() {
         // Given: KIND cluster without VMs
         var cluster = new ClusterSpec(
-            "dev",
-            ClusterType.KIND,
-            Optional.empty(),  // Use default IP
-            0, 0,
-            SizeProfile.MEDIUM,
-            List.of(),  // No explicit VMs
-            Optional.empty()
+                ClusterName.of("dev"),
+                ClusterType.KIND,
+                Optional.empty(),  // Use default IP
+                0, 0,
+                SizeProfile.MEDIUM,
+                List.of(),  // No explicit VMs
+                Optional.empty()
         );
 
         // When: orchestrate
@@ -56,26 +65,26 @@ class ClusterOrchestratorTest {
 
         var enriched = result.orElseThrow();
         assertThat(enriched.vms()).hasSize(1);
-        assertThat(enriched.vms().get(0))
-            .satisfies(vm -> {
-                assertThat(vm.name()).isEqualTo("dev");
-                assertThat(vm.role()).isEqualTo(NodeRole.CLUSTER);
-                assertThat(vm.ip()).isEqualTo("192.168.56.10");  // Default IP
-                assertThat(vm.sizeProfile()).isEqualTo(SizeProfile.MEDIUM);
-            });
+        assertThat(enriched.vms().getFirst())
+                .satisfies(vm -> {
+                    assertThat(vm.name()).isEqualTo(VmName.of("dev"));
+                    assertThat(vm.role()).isEqualTo(NodeRole.CLUSTER);
+                    assertThat(vm.ip()).isEqualTo("192.168.56.10");  // Default IP
+                    assertThat(vm.sizeProfile()).isEqualTo(SizeProfile.MEDIUM);
+                });
     }
 
     @Test
     void shouldOrchestrateMinikubeCluster() {
         // Given: MINIKUBE cluster with explicit IP
         var cluster = new ClusterSpec(
-            "staging",
-            ClusterType.MINIKUBE,
-            Optional.of("192.168.56.20"),
-            0, 0,
-            SizeProfile.LARGE,
-            List.of(),
-            Optional.empty()
+                ClusterName.of("staging"),
+                ClusterType.MINIKUBE,
+                Optional.of("192.168.56.20"),
+                0, 0,
+                SizeProfile.LARGE,
+                List.of(),
+                Optional.empty()
         );
 
         // When: orchestrate
@@ -86,26 +95,26 @@ class ClusterOrchestratorTest {
 
         var enriched = result.orElseThrow();
         assertThat(enriched.vms()).hasSize(1);
-        assertThat(enriched.vms().get(0))
-            .satisfies(vm -> {
-                assertThat(vm.name()).isEqualTo("staging");
-                assertThat(vm.role()).isEqualTo(NodeRole.CLUSTER);
-                assertThat(vm.ip()).isEqualTo("192.168.56.20");
-                assertThat(vm.sizeProfile()).isEqualTo(SizeProfile.LARGE);
-            });
+        assertThat(enriched.vms().getFirst())
+                .satisfies(vm -> {
+                    assertThat(vm.name()).isEqualTo(VmName.of("staging"));
+                    assertThat(vm.role()).isEqualTo(NodeRole.CLUSTER);
+                    assertThat(vm.ip()).isEqualTo("192.168.56.20");
+                    assertThat(vm.sizeProfile()).isEqualTo(SizeProfile.LARGE);
+                });
     }
 
     @Test
     void shouldOrchestrateNoneCluster() {
         // Given: NONE (management) cluster
         var cluster = new ClusterSpec(
-            "mgmt",
-            ClusterType.NONE,
-            Optional.of("192.168.56.6"),  // Note: .5 is reserved, so use .6
-            0, 0,
-            SizeProfile.SMALL,
-            List.of(),
-            Optional.empty()
+                ClusterName.of("mgmt"),
+                ClusterType.NONE,
+                Optional.of("192.168.56.6"),  // Note: .5 is reserved, so use .6
+                0, 0,
+                SizeProfile.SMALL,
+                List.of(),
+                Optional.empty()
         );
 
         // When: orchestrate
@@ -116,25 +125,25 @@ class ClusterOrchestratorTest {
 
         var enriched = result.orElseThrow();
         assertThat(enriched.vms()).hasSize(1);
-        assertThat(enriched.vms().get(0))
-            .satisfies(vm -> {
-                assertThat(vm.name()).isEqualTo("mgmt");
-                assertThat(vm.role()).isEqualTo(NodeRole.MANAGEMENT);
-                assertThat(vm.ip()).isEqualTo("192.168.56.6");
-            });
+        assertThat(enriched.vms().getFirst())
+                .satisfies(vm -> {
+                    assertThat(vm.name()).isEqualTo(VmName.of("mgmt"));
+                    assertThat(vm.role()).isEqualTo(NodeRole.MANAGEMENT);
+                    assertThat(vm.ip()).isEqualTo("192.168.56.6");
+                });
     }
 
     @Test
     void shouldOrchestrateKubeadmClusterSingleMaster() {
         // Given: KUBEADM cluster 1 master, 0 workers
         var cluster = new ClusterSpec(
-            "dev",
-            ClusterType.KUBEADM,
-            Optional.of("192.168.56.30"),
-            1, 0,
-            SizeProfile.MEDIUM,
-            List.of(),
-            Optional.of(CniType.FLANNEL)
+                ClusterName.of("dev"),
+                ClusterType.KUBEADM,
+                Optional.of("192.168.56.30"),
+                1, 0,
+                SizeProfile.MEDIUM,
+                List.of(),
+                Optional.of(CniType.FLANNEL)
         );
 
         // When: orchestrate
@@ -145,25 +154,25 @@ class ClusterOrchestratorTest {
 
         var enriched = result.orElseThrow();
         assertThat(enriched.vms()).hasSize(1);
-        assertThat(enriched.vms().get(0))
-            .satisfies(vm -> {
-                assertThat(vm.name()).isEqualTo("dev-master-1");
-                assertThat(vm.role()).isEqualTo(NodeRole.MASTER);
-                assertThat(vm.ip()).isEqualTo("192.168.56.30");
-            });
+        assertThat(enriched.vms().getFirst())
+                .satisfies(vm -> {
+                    assertThat(vm.name()).isEqualTo(VmName.of("dev-master-1"));
+                    assertThat(vm.role()).isEqualTo(NodeRole.MASTER);
+                    assertThat(vm.ip()).isEqualTo("192.168.56.30");
+                });
     }
 
     @Test
     void shouldOrchestrateKubeadmClusterMultiNode() {
         // Given: KUBEADM cluster 2 masters, 3 workers
         var cluster = new ClusterSpec(
-            "prod",
-            ClusterType.KUBEADM,
-            Optional.of("192.168.56.40"),
-            2, 3,
-            SizeProfile.LARGE,
-            List.of(),
-            Optional.of(CniType.CALICO)
+                ClusterName.of("prod"),
+                ClusterType.KUBEADM,
+                Optional.of("192.168.56.40"),
+                2, 3,
+                SizeProfile.LARGE,
+                List.of(),
+                Optional.of(CniType.CALICO)
         );
 
         // When: orchestrate
@@ -176,63 +185,63 @@ class ClusterOrchestratorTest {
         assertThat(enriched.vms()).hasSize(5);
 
         // Verify masters
-        assertThat(enriched.vms().get(0))
-            .satisfies(vm -> {
-                assertThat(vm.name()).isEqualTo("prod-master-1");
-                assertThat(vm.role()).isEqualTo(NodeRole.MASTER);
-                assertThat(vm.ip()).isEqualTo("192.168.56.40");
-            });
+        assertThat(enriched.vms().getFirst())
+                .satisfies(vm -> {
+                    assertThat(vm.name()).isEqualTo(PROD_MASTER_1);
+                    assertThat(vm.role()).isEqualTo(NodeRole.MASTER);
+                    assertThat(vm.ip()).isEqualTo("192.168.56.40");
+                });
 
         assertThat(enriched.vms().get(1))
-            .satisfies(vm -> {
-                assertThat(vm.name()).isEqualTo("prod-master-2");
-                assertThat(vm.role()).isEqualTo(NodeRole.MASTER);
-                assertThat(vm.ip()).isEqualTo("192.168.56.41");
-            });
+                .satisfies(vm -> {
+                    assertThat(vm.name()).isEqualTo(PROD_MASTER_2);
+                    assertThat(vm.role()).isEqualTo(NodeRole.MASTER);
+                    assertThat(vm.ip()).isEqualTo("192.168.56.41");
+                });
 
         // Verify workers
         assertThat(enriched.vms().get(2))
-            .satisfies(vm -> {
-                assertThat(vm.name()).isEqualTo("prod-worker-1");
-                assertThat(vm.role()).isEqualTo(NodeRole.WORKER);
-                assertThat(vm.ip()).isEqualTo("192.168.56.42");
-            });
+                .satisfies(vm -> {
+                    assertThat(vm.name()).isEqualTo(PROD_WORKER_1);
+                    assertThat(vm.role()).isEqualTo(NodeRole.WORKER);
+                    assertThat(vm.ip()).isEqualTo("192.168.56.42");
+                });
 
         assertThat(enriched.vms().get(3))
-            .satisfies(vm -> {
-                assertThat(vm.name()).isEqualTo("prod-worker-2");
-                assertThat(vm.role()).isEqualTo(NodeRole.WORKER);
-                assertThat(vm.ip()).isEqualTo("192.168.56.43");
-            });
+                .satisfies(vm -> {
+                    assertThat(vm.name()).isEqualTo(PROD_WORKER_2);
+                    assertThat(vm.role()).isEqualTo(NodeRole.WORKER);
+                    assertThat(vm.ip()).isEqualTo("192.168.56.43");
+                });
 
         assertThat(enriched.vms().get(4))
-            .satisfies(vm -> {
-                assertThat(vm.name()).isEqualTo("prod-worker-3");
-                assertThat(vm.role()).isEqualTo(NodeRole.WORKER);
-                assertThat(vm.ip()).isEqualTo("192.168.56.44");
-            });
+                .satisfies(vm -> {
+                    assertThat(vm.name()).isEqualTo(PROD_WORKER_3);
+                    assertThat(vm.role()).isEqualTo(NodeRole.WORKER);
+                    assertThat(vm.ip()).isEqualTo("192.168.56.44");
+                });
     }
 
     @Test
     void shouldSkipOrchestrationForClustersWithExplicitVms() {
         // Given: cluster with explicit VMs already defined
         var explicitVm = new VmConfig(
-            "custom-vm",
-            NodeRole.CLUSTER,
-            "10.0.0.10",
-            SizeProfile.MEDIUM,
-            Optional.of(4096),
-            Optional.of(4)
+                VmName.of("custom-vm"),
+                NodeRole.CLUSTER,
+                "10.0.0.10",
+                SizeProfile.MEDIUM,
+                Optional.of(4096),
+                Optional.of(4)
         );
 
         var cluster = new ClusterSpec(
-            "custom",
-            ClusterType.KIND,
-            Optional.empty(),
-            0, 0,
-            SizeProfile.MEDIUM,
-            List.of(explicitVm),  // Explicit VMs
-            Optional.empty()
+                ClusterName.of("custom"),
+                ClusterType.KIND,
+                Optional.empty(),
+                0, 0,
+                SizeProfile.MEDIUM,
+                List.of(explicitVm),  // Explicit VMs
+                Optional.empty()
         );
 
         // When: orchestrate
@@ -249,13 +258,13 @@ class ClusterOrchestratorTest {
     void shouldHandleIpAllocationFailure() {
         // Given: cluster with invalid IP format
         var cluster = new ClusterSpec(
-            "bad-ip",
-            ClusterType.KIND,
-            Optional.of("invalid-ip-format"),
-            0, 0,
-            SizeProfile.MEDIUM,
-            List.of(),
-            Optional.empty()
+                ClusterName.of("bad-ip"),
+                ClusterType.KIND,
+                Optional.of("invalid-ip-format"),
+                0, 0,
+                SizeProfile.MEDIUM,
+                List.of(),
+                Optional.empty()
         );
 
         // When: orchestrate
@@ -264,15 +273,15 @@ class ClusterOrchestratorTest {
         // Then: failure with descriptive error
         assertThat(result.isFailure()).isTrue();
         assertThat(result.getError())
-            .contains("IP allocation failed")
-            .contains("bad-ip");
+                .contains("IP allocation failed")
+                .contains("bad-ip");
     }
 
     @Test
     void shouldRejectNullCluster() {
         assertThatThrownBy(() -> orchestrator.orchestrate(null))
-            .isInstanceOf(NullPointerException.class)
-            .hasMessageContaining("cluster cannot be null");
+                .isInstanceOf(NullPointerException.class)
+                .hasMessageContaining("cluster cannot be null");
     }
 
     // ==================== Multi-Cluster Orchestration ====================
@@ -281,33 +290,33 @@ class ClusterOrchestratorTest {
     void shouldOrchestrateMultipleClustersIndependently() {
         // Given: 3 different clusters
         var kindCluster = new ClusterSpec(
-            "dev",
-            ClusterType.KIND,
-            Optional.of("192.168.56.10"),
-            0, 0,
-            SizeProfile.MEDIUM,
-            List.of(),
-            Optional.empty()
+                ClusterName.of("dev"),
+                ClusterType.KIND,
+                Optional.of("192.168.56.10"),
+                0, 0,
+                SizeProfile.MEDIUM,
+                List.of(),
+                Optional.empty()
         );
 
         var kubeadmCluster = new ClusterSpec(
-            "staging",
-            ClusterType.KUBEADM,
-            Optional.of("192.168.56.20"),
-            1, 2,
-            SizeProfile.MEDIUM,
-            List.of(),
-            Optional.of(CniType.CALICO)
+                ClusterName.of("staging"),
+                ClusterType.KUBEADM,
+                Optional.of("192.168.56.20"),
+                1, 2,
+                SizeProfile.MEDIUM,
+                List.of(),
+                Optional.of(CniType.CALICO)
         );
 
         var mgmtCluster = new ClusterSpec(
-            "mgmt",
-            ClusterType.NONE,
-            Optional.of("192.168.56.30"),
-            0, 0,
-            SizeProfile.SMALL,
-            List.of(),
-            Optional.empty()
+                ClusterName.of("mgmt"),
+                ClusterType.NONE,
+                Optional.of("192.168.56.30"),
+                0, 0,
+                SizeProfile.SMALL,
+                List.of(),
+                Optional.empty()
         );
 
         var clusters = List.of(kindCluster, kubeadmCluster, mgmtCluster);
@@ -322,21 +331,21 @@ class ClusterOrchestratorTest {
         assertThat(enrichedClusters).hasSize(3);
 
         // Verify dev (KIND)
-        assertThat(enrichedClusters.get(0).name()).isEqualTo("dev");
-        assertThat(enrichedClusters.get(0).vms()).hasSize(1);
-        assertThat(enrichedClusters.get(0).vms().get(0).ip()).isEqualTo("192.168.56.10");
+        assertThat(enrichedClusters.getFirst().name()).isEqualTo(DEV);
+        assertThat(enrichedClusters.getFirst().vms()).hasSize(1);
+        assertThat(enrichedClusters.getFirst().vms().getFirst().ip()).isEqualTo("192.168.56.10");
 
         // Verify staging (KUBEADM 1m,2w)
-        assertThat(enrichedClusters.get(1).name()).isEqualTo("staging");
+        assertThat(enrichedClusters.get(1).name()).isEqualTo(STAGING);
         assertThat(enrichedClusters.get(1).vms()).hasSize(3);
-        assertThat(enrichedClusters.get(1).vms().get(0).ip()).isEqualTo("192.168.56.20");
+        assertThat(enrichedClusters.get(1).vms().getFirst().ip()).isEqualTo("192.168.56.20");
         assertThat(enrichedClusters.get(1).vms().get(1).ip()).isEqualTo("192.168.56.21");
         assertThat(enrichedClusters.get(1).vms().get(2).ip()).isEqualTo("192.168.56.22");
 
         // Verify mgmt (NONE)
-        assertThat(enrichedClusters.get(2).name()).isEqualTo("mgmt");
+        assertThat(enrichedClusters.get(2).name()).isEqualTo(MGMT);
         assertThat(enrichedClusters.get(2).vms()).hasSize(1);
-        assertThat(enrichedClusters.get(2).vms().get(0).ip()).isEqualTo("192.168.56.30");
+        assertThat(enrichedClusters.get(2).vms().getFirst().ip()).isEqualTo("192.168.56.30");
     }
 
     @Test
@@ -356,33 +365,33 @@ class ClusterOrchestratorTest {
     void shouldFailFastOnFirstClusterError() {
         // Given: 3 clusters, second one has invalid IP
         var cluster1 = new ClusterSpec(
-            "valid1",
-            ClusterType.KIND,
-            Optional.of("192.168.56.10"),
-            0, 0,
-            SizeProfile.MEDIUM,
-            List.of(),
-            Optional.empty()
+                ClusterName.of("valid1"),
+                ClusterType.KIND,
+                Optional.of("192.168.56.10"),
+                0, 0,
+                SizeProfile.MEDIUM,
+                List.of(),
+                Optional.empty()
         );
 
         var cluster2 = new ClusterSpec(
-            "invalid",
-            ClusterType.KIND,
-            Optional.of("bad-ip"),  // Invalid IP
-            0, 0,
-            SizeProfile.MEDIUM,
-            List.of(),
-            Optional.empty()
+                ClusterName.of("invalid"),
+                ClusterType.KIND,
+                Optional.of("bad-ip"),  // Invalid IP
+                0, 0,
+                SizeProfile.MEDIUM,
+                List.of(),
+                Optional.empty()
         );
 
         var cluster3 = new ClusterSpec(
-            "valid3",
-            ClusterType.KIND,
-            Optional.of("192.168.56.30"),
-            0, 0,
-            SizeProfile.MEDIUM,
-            List.of(),
-            Optional.empty()
+                ClusterName.of("valid3"),
+                ClusterType.KIND,
+                Optional.of("192.168.56.30"),
+                0, 0,
+                SizeProfile.MEDIUM,
+                List.of(),
+                Optional.empty()
         );
 
         var clusters = List.of(cluster1, cluster2, cluster3);
@@ -393,40 +402,40 @@ class ClusterOrchestratorTest {
         // Then: failure with error from second cluster
         assertThat(result.isFailure()).isTrue();
         assertThat(result.getError())
-            .contains("IP allocation failed")
-            .contains("invalid");
+                .contains("IP allocation failed")
+                .contains("invalid");
     }
 
     @Test
     void shouldHandleMixOfExplicitAndGeneratedVms() {
         // Given: 2 clusters, one with explicit VMs, one without
         var explicitVm = new VmConfig(
-            "custom",
-            NodeRole.MANAGEMENT,
-            "10.0.0.5",
-            SizeProfile.SMALL,
-            Optional.empty(),
-            Optional.empty()
+                VmName.of("custom"),
+                NodeRole.MANAGEMENT,
+                "10.0.0.5",
+                SizeProfile.SMALL,
+                Optional.empty(),
+                Optional.empty()
         );
 
         var cluster1 = new ClusterSpec(
-            "explicit",
-            ClusterType.NONE,
-            Optional.empty(),
-            0, 0,
-            SizeProfile.SMALL,
-            List.of(explicitVm),  // Explicit VM
-            Optional.empty()
+                ClusterName.of("explicit"),
+                ClusterType.NONE,
+                Optional.empty(),
+                0, 0,
+                SizeProfile.SMALL,
+                List.of(explicitVm),  // Explicit VM
+                Optional.empty()
         );
 
         var cluster2 = new ClusterSpec(
-            "generated",
-            ClusterType.KIND,
-            Optional.of("192.168.56.20"),
-            0, 0,
-            SizeProfile.MEDIUM,
-            List.of(),  // Will be generated
-            Optional.empty()
+                ClusterName.of("generated"),
+                ClusterType.KIND,
+                Optional.of("192.168.56.20"),
+                0, 0,
+                SizeProfile.MEDIUM,
+                List.of(),  // Will be generated
+                Optional.empty()
         );
 
         var clusters = List.of(cluster1, cluster2);
@@ -441,19 +450,19 @@ class ClusterOrchestratorTest {
         assertThat(enrichedClusters).hasSize(2);
 
         // Verify first cluster kept explicit VM
-        assertThat(enrichedClusters.get(0).vms()).containsExactly(explicitVm);
+        assertThat(enrichedClusters.getFirst().vms()).containsExactly(explicitVm);
 
         // Verify second cluster has generated VM
         assertThat(enrichedClusters.get(1).vms()).hasSize(1);
-        assertThat(enrichedClusters.get(1).vms().get(0).name()).isEqualTo("generated");
-        assertThat(enrichedClusters.get(1).vms().get(0).ip()).isEqualTo("192.168.56.20");
+        assertThat(enrichedClusters.get(1).vms().getFirst().name()).isEqualTo(VmName.of("generated"));
+        assertThat(enrichedClusters.get(1).vms().getFirst().ip()).isEqualTo("192.168.56.20");
     }
 
     @Test
     void shouldRejectNullClusterList() {
         assertThatThrownBy(() -> orchestrator.orchestrateMulti(null))
-            .isInstanceOf(NullPointerException.class)
-            .hasMessageContaining("clusters cannot be null");
+                .isInstanceOf(NullPointerException.class)
+                .hasMessageContaining("clusters cannot be null");
     }
 
     // ==================== IP Allocation Integration Tests ====================
@@ -462,13 +471,13 @@ class ClusterOrchestratorTest {
     void shouldSkipReservedIpsDuringAllocation() {
         // Given: cluster starting at IP that would normally use reserved .5
         var cluster = new ClusterSpec(
-            "test",
-            ClusterType.KUBEADM,
-            Optional.of("192.168.56.3"),
-            3, 0,  // 3 masters: should get .3, .4, .6 (skip .5)
-            SizeProfile.MEDIUM,
-            List.of(),
-            Optional.of(CniType.CALICO)
+                ClusterName.of("test"),
+                ClusterType.KUBEADM,
+                Optional.of("192.168.56.3"),
+                3, 0,  // 3 masters: should get .3, .4, .6 (skip .5)
+                SizeProfile.MEDIUM,
+                List.of(),
+                Optional.of(CniType.CALICO)
         );
 
         // When: orchestrate
@@ -479,7 +488,7 @@ class ClusterOrchestratorTest {
 
         var enriched = result.orElseThrow();
         assertThat(enriched.vms()).hasSize(3);
-        assertThat(enriched.vms().get(0).ip()).isEqualTo("192.168.56.3");
+        assertThat(enriched.vms().getFirst().ip()).isEqualTo("192.168.56.3");
         assertThat(enriched.vms().get(1).ip()).isEqualTo("192.168.56.4");
         assertThat(enriched.vms().get(2).ip()).isEqualTo("192.168.56.6");  // Skipped .5
     }
@@ -488,13 +497,13 @@ class ClusterOrchestratorTest {
     void shouldHandleSubnetBoundaryViolation() {
         // Given: cluster starting at .252 needing 5 IPs (would exceed .254)
         var cluster = new ClusterSpec(
-            "boundary-test",
-            ClusterType.KUBEADM,
-            Optional.of("192.168.56.252"),
-            3, 2,  // 5 total VMs
-            SizeProfile.MEDIUM,
-            List.of(),
-            Optional.of(CniType.CALICO)
+                ClusterName.of("boundary-test"),
+                ClusterType.KUBEADM,
+                Optional.of("192.168.56.252"),
+                3, 2,  // 5 total VMs
+                SizeProfile.MEDIUM,
+                List.of(),
+                Optional.of(CniType.CALICO)
         );
 
         // When: orchestrate
@@ -503,8 +512,8 @@ class ClusterOrchestratorTest {
         // Then: failure due to subnet boundary
         assertThat(result.isFailure()).isTrue();
         assertThat(result.getError())
-            .contains("IP allocation failed")
-            .contains("boundary-test");
+                .contains("IP allocation failed")
+                .contains("boundary-test");
     }
 
     // ==================== Naming Convention Tests ====================
@@ -513,14 +522,14 @@ class ClusterOrchestratorTest {
     void shouldFollowNamingConventionConsistently() {
         // Given: various cluster types
         var clusters = List.of(
-            new ClusterSpec("dev", ClusterType.KIND, Optional.of("192.168.56.10"),
-                0, 0, SizeProfile.MEDIUM, List.of(), Optional.empty()),
-            new ClusterSpec("staging", ClusterType.MINIKUBE, Optional.of("192.168.56.20"),
-                0, 0, SizeProfile.MEDIUM, List.of(), Optional.empty()),
-            new ClusterSpec("mgmt", ClusterType.NONE, Optional.of("192.168.56.30"),
-                0, 0, SizeProfile.SMALL, List.of(), Optional.empty()),
-            new ClusterSpec("prod", ClusterType.KUBEADM, Optional.of("192.168.56.40"),
-                2, 3, SizeProfile.LARGE, List.of(), Optional.of(CniType.CALICO))
+                new ClusterSpec(ClusterName.of("dev"), ClusterType.KIND, Optional.of("192.168.56.10"),
+                        0, 0, SizeProfile.MEDIUM, List.of(), Optional.empty()),
+                new ClusterSpec(ClusterName.of("staging"), ClusterType.MINIKUBE, Optional.of("192.168.56.20"),
+                        0, 0, SizeProfile.MEDIUM, List.of(), Optional.empty()),
+                new ClusterSpec(ClusterName.of("mgmt"), ClusterType.NONE, Optional.of("192.168.56.30"),
+                        0, 0, SizeProfile.SMALL, List.of(), Optional.empty()),
+                new ClusterSpec(ClusterName.of("prod"), ClusterType.KUBEADM, Optional.of("192.168.56.40"),
+                        2, 3, SizeProfile.LARGE, List.of(), Optional.of(CniType.CALICO))
         );
 
         // When: orchestrateMulti
@@ -531,19 +540,19 @@ class ClusterOrchestratorTest {
         var enriched = result.orElseThrow();
 
         // KIND: VM name = cluster name
-        assertThat(enriched.get(0).vms().get(0).name()).isEqualTo("dev");
+        assertThat(enriched.getFirst().vms().getFirst().name()).isEqualTo(VmName.of("dev"));
 
         // MINIKUBE: VM name = cluster name
-        assertThat(enriched.get(1).vms().get(0).name()).isEqualTo("staging");
+        assertThat(enriched.get(1).vms().getFirst().name()).isEqualTo(VmName.of("staging"));
 
         // NONE: VM name = cluster name
-        assertThat(enriched.get(2).vms().get(0).name()).isEqualTo("mgmt");
+        assertThat(enriched.get(2).vms().getFirst().name()).isEqualTo(VmName.of("mgmt"));
 
         // KUBEADM: cluster-prefixed names
-        assertThat(enriched.get(3).vms().get(0).name()).isEqualTo("prod-master-1");
-        assertThat(enriched.get(3).vms().get(1).name()).isEqualTo("prod-master-2");
-        assertThat(enriched.get(3).vms().get(2).name()).isEqualTo("prod-worker-1");
-        assertThat(enriched.get(3).vms().get(3).name()).isEqualTo("prod-worker-2");
-        assertThat(enriched.get(3).vms().get(4).name()).isEqualTo("prod-worker-3");
+        assertThat(enriched.get(3).vms().getFirst().name()).isEqualTo(PROD_MASTER_1);
+        assertThat(enriched.get(3).vms().get(1).name()).isEqualTo(PROD_MASTER_2);
+        assertThat(enriched.get(3).vms().get(2).name()).isEqualTo(PROD_WORKER_1);
+        assertThat(enriched.get(3).vms().get(3).name()).isEqualTo(PROD_WORKER_2);
+        assertThat(enriched.get(3).vms().get(4).name()).isEqualTo(PROD_WORKER_3);
     }
 }
